--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT = 3000
-MONGODB_URI = mongodb+srv://simon:simon@cluster0.xefoe.mongodb.net/eccomerce
+MONGODB_URI = mongodb+srv://user:password@cluster0.xefoe.mongodb.net/eccomerce
